--- a/CardioHealth/TasksAndSteps/Seven Day Allocation/Activity Tracking/APHActivityTracking.storyboard
+++ b/CardioHealth/TasksAndSteps/Seven Day Allocation/Activity Tracking/APHActivityTracking.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VrU-qS-l30">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VrU-qS-l30">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -14,69 +14,40 @@
                         <viewControllerLayoutGuide type="bottom" id="upX-AZ-JBq"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IaW-xM-au3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 Days Remaining" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uN4-Ax-0TN">
-                                <rect key="frame" x="16" y="8" width="568" height="21"/>
+                                <rect key="frame" x="16" y="8" width="288" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.55686277151107788" green="0.55686277151107788" blue="0.57647061347961426" alpha="1" colorSpace="deviceRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U6v-h5-YfZ">
-                                <rect key="frame" x="0.0" y="37" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="37" width="320" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9v-rA-wCa">
-                                        <rect key="frame" x="48" y="3" width="89" height="38"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="89" id="7XZ-06-XDK"/>
-                                            <constraint firstAttribute="height" constant="38" id="goX-Ef-Gen"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Today">
-                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="TP5-KZ-eqt">
+                                        <rect key="frame" x="8" y="8" width="304" height="29"/>
+                                        <segments>
+                                            <segment title="Yesterday"/>
+                                            <segment title="Today"/>
+                                            <segment title="Week"/>
+                                        </segments>
                                         <connections>
-                                            <action selector="handleToday:" destination="VrU-qS-l30" eventType="touchUpInside" id="lVH-8T-9PF"/>
+                                            <action selector="handleDays:" destination="VrU-qS-l30" eventType="valueChanged" id="Iqc-1G-h6l"/>
                                         </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69k-ZL-o2M">
-                                        <rect key="frame" x="462" y="3" width="90" height="38"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="90" id="8Ue-Pq-YaO"/>
-                                            <constraint firstAttribute="height" constant="38" id="ufo-BH-aoN"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Week">
-                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="selected">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="handleWeek:" destination="VrU-qS-l30" eventType="touchUpInside" id="bn1-vj-cG9"/>
-                                        </connections>
-                                    </button>
+                                    </segmentedControl>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="p9v-rA-wCa" firstAttribute="top" secondItem="U6v-h5-YfZ" secondAttribute="top" constant="3" id="7vJ-c5-YgT"/>
-                                    <constraint firstItem="p9v-rA-wCa" firstAttribute="leading" secondItem="U6v-h5-YfZ" secondAttribute="leading" constant="48" id="E88-LP-5uh"/>
+                                    <constraint firstItem="TP5-KZ-eqt" firstAttribute="leading" secondItem="U6v-h5-YfZ" secondAttribute="leadingMargin" id="GBN-U3-Asa"/>
                                     <constraint firstAttribute="height" constant="44" id="Icr-RN-NOx"/>
-                                    <constraint firstAttribute="trailing" secondItem="69k-ZL-o2M" secondAttribute="trailing" constant="48" id="egr-SW-ZHq"/>
-                                    <constraint firstItem="69k-ZL-o2M" firstAttribute="top" secondItem="U6v-h5-YfZ" secondAttribute="top" constant="3" id="lpo-AQ-YuD"/>
+                                    <constraint firstItem="TP5-KZ-eqt" firstAttribute="trailing" secondItem="U6v-h5-YfZ" secondAttribute="trailingMargin" id="M8A-bf-fLF"/>
+                                    <constraint firstItem="TP5-KZ-eqt" firstAttribute="top" secondItem="U6v-h5-YfZ" secondAttribute="topMargin" id="QFp-Db-c66"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5zS-Qy-ghC" customClass="APCPieGraphView">
-                                <rect key="frame" x="0.0" y="81" width="600" height="455"/>
+                                <rect key="frame" x="0.0" y="81" width="320" height="423"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -96,11 +67,11 @@
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="btnToday" destination="p9v-rA-wCa" id="mNm-pW-dcc"/>
-                        <outlet property="btnWeek" destination="69k-ZL-o2M" id="jtf-NS-8nt"/>
                         <outlet property="chartView" destination="5zS-Qy-ghC" id="H3w-TY-Isq"/>
                         <outlet property="daysRemaining" destination="uN4-Ax-0TN" id="fHh-gs-f2j"/>
+                        <outlet property="segmentDays" destination="TP5-KZ-eqt" id="dDC-T3-hGb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wVk-sI-Vwd" userLabel="First Responder" sceneMemberID="firstResponder"/>
