--- a/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
+++ b/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
@@ -501,14 +501,14 @@
                                         <constraint firstAttribute="trailing" secondItem="PCh-Yt-exC" secondAttribute="trailing" id="PuG-5D-mEf"/>
                                         <constraint firstItem="eTs-lQ-axD" firstAttribute="top" secondItem="hnf-8k-xB0" secondAttribute="topMargin" id="RYT-ln-yvn"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="1wR-Mp-kV6" secondAttribute="bottom" constant="19" id="VSG-gp-jj7"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="HSX-hC-8a2" secondAttribute="trailing" constant="-8" id="Z3h-XA-GCM"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="OdP-Pd-U0B" secondAttribute="trailing" constant="-8" id="bsg-X2-bFS"/>
-                                        <constraint firstItem="OdP-Pd-U0B" firstAttribute="leading" secondItem="hnf-8k-xB0" secondAttribute="leadingMargin" constant="-8" id="ifO-ak-Rte"/>
+                                        <constraint firstAttribute="trailing" secondItem="HSX-hC-8a2" secondAttribute="trailing" id="Z3h-XA-GCM"/>
+                                        <constraint firstAttribute="trailing" secondItem="OdP-Pd-U0B" secondAttribute="trailing" id="bsg-X2-bFS"/>
+                                        <constraint firstItem="OdP-Pd-U0B" firstAttribute="leading" secondItem="hnf-8k-xB0" secondAttribute="leading" id="ifO-ak-Rte"/>
                                         <constraint firstItem="Fin-wF-KQK" firstAttribute="top" secondItem="hnf-8k-xB0" secondAttribute="topMargin" id="lwu-8b-ntA"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="ECo-CN-pkA" secondAttribute="trailing" constant="48" id="mkt-Ny-wC7"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="HSX-hC-8a2" secondAttribute="bottom" constant="-1" id="mlb-f5-faV"/>
                                         <constraint firstItem="ECo-CN-pkA" firstAttribute="top" secondItem="eTs-lQ-axD" secondAttribute="bottom" constant="4" id="n6i-Pw-e9O"/>
-                                        <constraint firstItem="HSX-hC-8a2" firstAttribute="leading" secondItem="hnf-8k-xB0" secondAttribute="leadingMargin" constant="-8" id="r0f-nn-Kf7"/>
+                                        <constraint firstItem="HSX-hC-8a2" firstAttribute="leading" secondItem="hnf-8k-xB0" secondAttribute="leading" id="r0f-nn-Kf7"/>
                                         <constraint firstItem="Fin-wF-KQK" firstAttribute="leading" secondItem="eTs-lQ-axD" secondAttribute="trailing" id="rwc-Ad-PP2"/>
                                         <constraint firstItem="1wR-Mp-kV6" firstAttribute="top" secondItem="hnf-8k-xB0" secondAttribute="topMargin" constant="66" id="t82-84-Bh0"/>
                                     </constraints>
@@ -631,35 +631,35 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="O4s-1l-gwU" secondAttribute="trailing" constant="6" id="3Cm-M8-K8E"/>
-                                        <constraint firstItem="siJ-GN-0rv" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="-8" id="3gd-cA-HIi"/>
+                                        <constraint firstItem="siJ-GN-0rv" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leading" id="3gd-cA-HIi"/>
                                         <constraint firstItem="O4s-1l-gwU" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="10" id="59B-hx-KzX"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="gr2-Pv-597" secondAttribute="trailing" constant="2" id="9qO-0y-o83"/>
                                         <constraint firstItem="D3b-aU-9Wk" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="10" id="BeA-pE-ZVE"/>
                                         <constraint firstItem="76p-ol-TDH" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="10" id="EYb-4S-jnJ"/>
-                                        <constraint firstItem="49A-EB-O5Q" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="-8" id="QxC-JC-gGC"/>
+                                        <constraint firstItem="49A-EB-O5Q" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leading" id="QxC-JC-gGC"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="5sA-Wi-EFX" secondAttribute="trailing" constant="6" id="S72-Wl-Lxd"/>
                                         <constraint firstItem="5sA-Wi-EFX" firstAttribute="top" secondItem="O4s-1l-gwU" secondAttribute="bottom" constant="2" id="Sn8-Kh-hxp"/>
                                         <constraint firstItem="O4s-1l-gwU" firstAttribute="top" secondItem="76p-ol-TDH" secondAttribute="bottom" constant="2" id="Tae-N2-46B"/>
                                         <constraint firstItem="nrY-5Z-BDX" firstAttribute="top" secondItem="OmP-kc-1zV" secondAttribute="topMargin" constant="-7" id="VEn-WM-WQU"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="nrY-5Z-BDX" secondAttribute="bottom" constant="-1" id="Veh-EK-cKl"/>
-                                        <constraint firstItem="nrY-5Z-BDX" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="-8" id="Vtz-jY-lUR"/>
+                                        <constraint firstItem="nrY-5Z-BDX" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leading" id="Vtz-jY-lUR"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="D3b-aU-9Wk" secondAttribute="trailing" constant="6" id="aV0-aa-hKp"/>
                                         <constraint firstItem="siJ-GN-0rv" firstAttribute="top" secondItem="OmP-kc-1zV" secondAttribute="topMargin" constant="-8" id="aVP-0d-7Dl"/>
                                         <constraint firstItem="kLW-0o-hoO" firstAttribute="leading" secondItem="1F9-qE-B6Q" secondAttribute="trailing" id="bDZ-VT-X3c"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="D3b-aU-9Wk" secondAttribute="bottom" constant="6" id="bTc-ET-M3b"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="49A-EB-O5Q" secondAttribute="trailing" constant="-8" id="bV0-wl-ztG"/>
+                                        <constraint firstAttribute="trailing" secondItem="49A-EB-O5Q" secondAttribute="trailing" id="bV0-wl-ztG"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="WMk-eF-DkI" secondAttribute="bottom" constant="-8" id="df4-1p-H1l"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="49A-EB-O5Q" secondAttribute="bottom" constant="-1" id="gTF-PA-TMw"/>
                                         <constraint firstItem="gr2-Pv-597" firstAttribute="top" secondItem="OmP-kc-1zV" secondAttribute="topMargin" constant="6" id="hqZ-gq-TPo"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="76p-ol-TDH" secondAttribute="trailing" constant="6" id="ik7-hU-8O2"/>
                                         <constraint firstItem="1F9-qE-B6Q" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="8" id="kgM-sW-lvq"/>
                                         <constraint firstItem="5sA-Wi-EFX" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="10" id="koy-v1-0Xx"/>
-                                        <constraint firstItem="WMk-eF-DkI" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leadingMargin" constant="-8" id="lt9-ur-6ai"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="WMk-eF-DkI" secondAttribute="trailing" constant="-8" id="mkU-tZ-q2r"/>
+                                        <constraint firstItem="WMk-eF-DkI" firstAttribute="leading" secondItem="OmP-kc-1zV" secondAttribute="leading" id="lt9-ur-6ai"/>
+                                        <constraint firstAttribute="trailing" secondItem="WMk-eF-DkI" secondAttribute="trailing" id="mkU-tZ-q2r"/>
                                         <constraint firstItem="1F9-qE-B6Q" firstAttribute="top" secondItem="OmP-kc-1zV" secondAttribute="topMargin" id="tyC-At-wFv"/>
                                         <constraint firstItem="kLW-0o-hoO" firstAttribute="top" secondItem="OmP-kc-1zV" secondAttribute="topMargin" id="vrF-Hw-4HL"/>
                                         <constraint firstItem="76p-ol-TDH" firstAttribute="top" secondItem="1F9-qE-B6Q" secondAttribute="bottom" constant="6" id="w9Y-7d-QEU"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="siJ-GN-0rv" secondAttribute="trailing" constant="-8" id="wXp-WE-BNI"/>
+                                        <constraint firstAttribute="trailing" secondItem="siJ-GN-0rv" secondAttribute="trailing" id="wXp-WE-BNI"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -687,7 +687,7 @@
                                                 <constraint firstAttribute="height" constant="1" id="4SO-sl-gjO"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily Insights" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9O-8Z-ZSV">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insights" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9O-8Z-ZSV">
                                             <rect key="frame" x="16" y="8" width="182" height="26"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="182" id="18k-t1-VjY"/>
@@ -711,7 +711,7 @@
                                                 <action selector="infoTapped:" destination="hcG-Ja-MeF" eventType="touchUpInside" id="cbP-cG-QAw"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jev-sV-5Dk" userLabel="Resize Button">
+                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jev-sV-5Dk" userLabel="Resize Button">
                                             <rect key="frame" x="335" y="14" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="30" id="Rl6-vL-u5j"/>
@@ -734,9 +734,9 @@
                                     <constraints>
                                         <constraint firstItem="N9O-8Z-ZSV" firstAttribute="leading" secondItem="goG-1Y-Tsz" secondAttribute="leadingMargin" constant="8" id="09S-8N-7IA"/>
                                         <constraint firstItem="aH9-zT-hAv" firstAttribute="leading" secondItem="N9O-8Z-ZSV" secondAttribute="trailing" id="3ni-hL-nZN"/>
-                                        <constraint firstItem="QjA-im-YXm" firstAttribute="leading" secondItem="goG-1Y-Tsz" secondAttribute="leadingMargin" constant="-8" id="9m0-bm-U7s"/>
+                                        <constraint firstItem="QjA-im-YXm" firstAttribute="leading" secondItem="goG-1Y-Tsz" secondAttribute="leading" id="9m0-bm-U7s"/>
                                         <constraint firstItem="Rkg-SF-eX1" firstAttribute="leading" secondItem="goG-1Y-Tsz" secondAttribute="leadingMargin" constant="8" id="DG8-QL-bGh"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="QjA-im-YXm" secondAttribute="trailing" constant="-8" id="JSd-4K-0bI"/>
+                                        <constraint firstAttribute="trailing" secondItem="QjA-im-YXm" secondAttribute="trailing" id="JSd-4K-0bI"/>
                                         <constraint firstItem="aH9-zT-hAv" firstAttribute="top" secondItem="goG-1Y-Tsz" secondAttribute="topMargin" id="Xw8-I4-qsw"/>
                                         <constraint firstItem="N9O-8Z-ZSV" firstAttribute="top" secondItem="goG-1Y-Tsz" secondAttribute="topMargin" id="a2S-zy-WYO"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="Rkg-SF-eX1" secondAttribute="trailing" constant="2" id="dKA-hM-hCT"/>
